--- a/packages/localstack-sdk-generated/templates/pyproject.mustache
+++ b/packages/localstack-sdk-generated/templates/pyproject.mustache
@@ -1,9 +1,20 @@
 [project]
 name = "localstack-sdk-generated"
-version = "0.0.1" # todo: automate this (should be from localstack)
+version = "{{{packageVersion}}}"
 description = "LocalStack REST API - Generated Code"
 authors = [
         { name = "LocalStack Contributors", email = "info@localstack.cloud" }
+]
+dependencies = [
+    "urllib3 >= 1.25.3, < 3.0.0",
+    "python_dateutil >= 2.8.2",
+    "pydantic >= 2",
+    "typing-extensions >= 4.7.1"
+]
+
+[tool.uv]
+dev-dependencies = [
+  "pytest >= 7.2.1"
 ]
 
 [build-system]
@@ -14,6 +25,6 @@ build-backend = "setuptools.build_meta"
 package-dir = { "" = "."}
 
 [tool.setuptools.packages.find]
-where = ["localstack-sdk-generated"]
-include = ["localstack*"]
+where = ["."]
+include = ["*"]
 exclude = ["tests*"]
